# AHRS

./: .gitignore  .gitmodules  CMakeLists.txt  KFEquations.py  KFEquationsSimple.py  README.md  magData.csv  plotAttitude.py  plotAttitudeBT.py  plotLog.py  plotMagCal.py  plotMagData.py  plotMagDataBT.py  sdkconfig  sdkconfig.bkp  sdkconfig.old
lib/ATGM336/: ATGM336.cpp  CMakeLists.txt
lib/ATGM336/include/: ATGM336.h
lib/DCM/: CMakeLists.txt  DCM.cpp
lib/GY87/: CMakeLists.txt  GY87.cpp
lib/KF/: CMakeLists.txt  KF.cpp
lib/NEO-M8N/: CMakeLists.txt  NEO-M8N.cpp
lib/NMEA/: CMakeLists.txt  nmea_parser.c  nmea_parser.h  nmea_parser_example_main.c
lib/gpio-handler/: CMakeLists.txt  gpio-handler.cpp
lib/serial-logger/: serial-logger.cpp
lib/vMath/: CMakeLists.txt  vMath.cpp
lib/vMath/include/: vMath.h
logs/: 0.CSV  0.eps  03D.eps  0LatLon.eps  1.CSV  1.eps  13D.eps  143D.eps  14LatLon.eps  16.eps  163D.eps  1LatLon.eps  20.eps  20LatLon.eps  223D.eps  23D.eps  253D.eps  27LatLon.eps  28.eps  283D.eps  28LatLon.eps  30.eps  63D.eps  6LatLon.eps  7.eps  7LatLon.eps  8.eps  83D.eps
logs/Old/: 14.eps  15.eps  153D.eps  15LatLon.eps  16LatLon.eps  18.eps  183D.eps  18LatLon.eps  2.CSV  2.eps  203D.eps  22.eps  22LatLon.eps  25.eps  25LatLon.eps  27.eps  273D.eps  28LatLon.eps  29.eps  293D.eps  29LatLon.eps  2LatLon.eps  303D.eps  30LatLon.eps  33.eps  333D.eps  33LatLon.eps  6.eps  73D.eps  8LatLon.eps
main/: BT.cpp  CMakeLists.txt  SD-SPI.cpp  config.h  main.cpp  main.h
pythonUtils/: __init__.py  getDataFromLog.py  getDataFromSerial.py  plotAxis.py
(+6 files in other folders)
